[package]
name = "zj-go-tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
strum = { version = "0.26.2", features = ["derive"] }
zellij-tile = "0.40.0"
